--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpeedwayTyperApp</title>
+    <title>Speedway Typer</title>
     <base href="/" />
-    <link href="_content/Radzen.Blazor/css/default-base.css" rel="stylesheet" />
-    <link href="_content/Radzen.Blazor/css/default.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
 </head>
-
 <body>
     <app>
         <div id="app">Loading...</div>
     </app>
-
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
-
 </html>
